--- a/composer.json
+++ b/composer.json
@@ -1,1 +1,32 @@
-{}
+{
+    "name": "twilio/sdk",
+    "type": "library",
+    "description": "A PHP wrapper for Twilio's API",
+    "keywords": ["twilio", "sms", "api"],
+    "homepage": "http://github.com/twilio/twilio-php",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Twilio API Team",
+            "email": "api@twilio.com"
+        }
+    ],
+    "require-dev": {
+        "guzzlehttp/guzzle": "^6.3 || ^7.0",
+        "phpunit/phpunit": ">=4.5",
+        "theseer/phpdox": "^0.12.0"
+    },
+    "suggest": {
+        "guzzlehttp/guzzle": "An HTTP client to execute the API requests"
+    },
+    "autoload": {
+        "psr-4": {
+            "Twilio\\": "src/Twilio/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Twilio\\Tests\\": "tests/Twilio/"
+        }
+    }
+}
